# dsplab

./: .gitignore  filter.h
cooficienten/: filter.h  log.txt
software/: DSB.cmake  DSBConfig.h.in
software/DSB/: beschrijving.txt  licentie.txt  welkom.txt
software/DesktopBasis/buildsystem/: BasisDesktop.cmake  BasisWXWidgets.cmake  FindCCache.cmake  FindClang.cmake  FindFFTW.cmake  FindLibUSB.cmake  FindValgrind.cmake  Findcppcheck.cmake  Findcppcheck.cpp  FixBundle.cmake  InitDesktop.cmake  ZetTalen.cmake  memtest.py
software/DesktopBasis/buildsystem/installatie/: WindowsWXResourceBestand.rc.in
software/DesktopBasis/buildsystem/patch/: FindwxWidgets.cmake
software/DesktopBasis/buildsystem/scripts/: cppcheck.py
software/DesktopBasis/gemeenschappelijk/apple/: DSB.icns  ESE.icns  Info.plist  MacOSXBundleInfo.plist.in
software/DesktopBasis/gemeenschappelijk/logos/: hanlogo.icns  hanlogo.inc  hanlogo.xpm  hanlogo_klein.inc
software/DesktopBasis/gemeenschappelijk/win32/: dsb.rc
software/DesktopBasis/gemeenschappelijk/wxBasis/: CMakeLists.txt  algemeen.cpp  desktopApp.cpp  grafiekVenster.cpp
software/STM32Basis/: ARMCortexMToolchain.cmake  BasisSTM32.cmake  STM32Development.cmake  STM32PostSetupDevelopment.cmake  ZetARMCortexMToolchain.cmake
software/STM32Basis/HAL/buildsystem/: STM32F030.cmake  STM32F051.cmake  STM32F072.cmake  STM32F1.cmake  STM32F301x8.cmake  STM32F303xc.cmake  STM32F407.cmake  STM32F411.cmake  STM32F412xG.cmake  STM32F746.cmake  STM32L432KC.cmake
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/Components/: CMakeLists.txt
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/Components/ft6x06/: ft6x06.h
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/Components/ls016b8uy/: ls016b8uy.c  ls016b8uy.h
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/Components/n25q128a/: n25q128a.h
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/Components/n25q256a/: n25q256a.h
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/Components/n25q512a/: n25q512a.h
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/Components/s25fl512s/: s25fl512s.h
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/Components/st7735/: st7735.h
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/Components/st7789h2/: st7789h2.c  st7789h2.h
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/Components/stmpe1600/: stmpe1600.c
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/STM32412G-Discovery/: CMakeLists.txt  STM32412gDiscovery.cpp  STM32412gDiscoveryGUI.cpp  stm32412g_discovery.c  stm32412g_discovery.h  stm32412g_discovery_audio.c  stm32412g_discovery_audio.h  stm32412g_discovery_eeprom.h  stm32412g_discovery_lcd.c  stm32412g_discovery_lcd.h  stm32412g_discovery_qspi.h  stm32412g_discovery_sd.h  stm32412g_discovery_ts.c  stm32412g_discovery_ts.h
software/STM32Basis/HAL/gemeenschappelijk/Libraries/BSP/STM32412G-Discovery/h/: STM32412gDiscovery.h  STM32412gDiscoveryGUI.h
software/STM32Basis/HAL/gemeenschappelijk/Libraries/STM32F4xx_HAL_Driver/: CMakeLists.txt
software/STM32Basis/HAL/gemeenschappelijk/Libraries/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_def.h
software/STM32Basis/HAL/gemeenschappelijk/Libraries/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_timebase_rtc_alarm_template.ctempl  stm32f4xx_hal_timebase_rtc_wakeup_template.ctempl  stm32f4xx_hal_timebase_tim_template.ctempl  stm32f4xx_ll_utils.c
software/STM32Basis/HAL/gemeenschappelijk/Libraries/Utilities/: CMakeLists.txt
software/STM32Basis/HAL/gemeenschappelijk/Libraries/Utilities/CPU/: cpu_utils.c
software/STM32Basis/HAL/gemeenschappelijk/Libraries/Utilities/Fonts/: font20.c  fonts.h
software/STM32Basis/Segger/JLink/: ozoneprotobestand.jdebug.in
software/STM32Basis/Segger/Segger_RTT/: CMakeLists.txt
software/STM32Basis/Segger/Segger_Sysview/: CMakeLists.txt  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW_Conf.h
software/STM32Basis/gemeenschappelijk/ESEFreeRTOS/: CMakeLists.txt  stdTaak.cpp
software/algemeen/: CMakeLists.txt  algdef.cpp  dataPakket.cpp
software/algemeen/h/: algdef.h  dataPakket.h
software/opdracht1/: CMakeLists.txt
software/opdracht1/Basis/: CMakeLists.txt  applikatie1.cpp
software/opdracht1/Basis/h/: applikatie1.h
software/opdracht1/STUDENT/: dsbComplex.cpp  dsbComplexBasis.cpp
software/opdracht1/STUDENT/h/: dsbComplex.h  dsbComplexBasis.h  dsbRingBuffer.h
software/opdracht2/: CMakeLists.txt
software/opdracht2/STUDENT/: gemwaarde.cpp  gemwaarde.h
software/opdracht2/STUDENT/expAverage/: CMakeLists.txt  expAverage.cpp  expAverage.h
software/opdracht2/data/: dollareurokoers.valdat
software/opdracht3/: CMakeLists.txt
software/opdracht3/STUDENT/: signaal.cpp  signaal.h
software/opdracht4/: CMakeLists.txt
software/opdracht4/Basis/: CMakeLists.txt  applikatie4.cpp
software/opdracht4/Basis/h/: applikatie4.h
software/opdracht4/STUDENT/filter/: CMakeLists.txt  firfilter.cpp  firfilter.h
software/opdracht4/STUDENT/ontwerper/: CMakeLists.txt  demofiltercoeffs.h  filterDesigner.cpp  filterDesigner.h  filterDesignerBasis.cpp
software/opdracht4/STUDENT/ontwerper/h/: filterDesignerBasis.h
software/opdracht5/: CMakeLists.txt
software/opdracht5/Basis/: main.cpp  rtosTaak.cpp
software/opdracht5/Basis/h/: rtosTaak.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
software/opdracht5/CLion/Debug/: CMakeCache.txt
software/opdracht5/CLion/Debug/gegenereerd/: DSBConfig.h  ozoneConfig.jdebug
software/opdracht5/CLion/Release/: CMakeCache.txt
software/opdracht5/STUDENT/: CMakeLists.txt  student.cpp
software/opdracht5/STUDENT/filter/: firfilterexport.h
software/opdracht5/STUDENT/h/: student.h
software/opdracht5/config/: FreeRTOSConfig.h  GUIConf.h  armgdbinit  lcd_log_conf.h  stm32f4xx_hal_conf.h
software/talen/de/: DSB.mo  DSB.po
software/talen/id/: DSB.mo  DSB.po
software/talen/nl/: DSB.mo  DSB.po
software/talen/ro/: DSB.mo  DSB.po
software/talen/ru/: DSB.mo  DSB.po
software/talen/vi/: DSB.mo  DSB.po
software/talen/zh_CN/: DSB.mo  DSB.po
(+50 files in other folders)
